# notification_task

./: .gitignore  README.md  env  manage.py  pyproject.toml  test_fallback.py
notification_task/: asgi.py  celery.py  settings.py  wsgi.py
notifications/: admin.py  channels.py  models.py  service.py  tasks.py
