# pyproject.toml
[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "Django notification service with multiple channels"
authors = ["Mmoskwi4 germandemin2211@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.0"
celery = "^5.3.0"
redis = "^4.5.0"
django-celery-email = "^3.0"
python-telegram-bot = "^20.0"
twilio = "^8.0.0"
requests = "^2.28.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.0"
django-debug-toolbar = "^4.0.0"
django-extensions = "^3.2.0"
flower = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"